[package]
name = "possum-world"
version = "0.1.0"
authors = ["Chris Martin"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
nalgebra-glm = "0.3"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
phf = { version = "0.11", features=["macros"] }

[dependencies.console_error_panic_hook]
version = "0.1.7"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
  'WebGlTexture',
  'KeyboardEvent',
  'EventTarget',
  'console',
  'WebSocket',
  'BinaryType'
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[package.metadata.wasm-pack.profile.release]
# Temporarily disable wasm-opt due to https://github.com/trunk-rs/trunk/issues/904
wasm-opt = false

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# Fix issue with webpack (Internal failure: parseVec could not cast the value)
strip = true